--- a/27_HTML_5_AUDIO_VIDEO_Elements.html
+++ b/27_HTML_5_AUDIO_VIDEO_Elements.html
@@ -34,7 +34,8 @@
     <h3>Video Player</h3>
     <div>
     	<video controls>
-    		<source src="media/hearttouch.mp4" type="video/mp4">
+            <!-- add a video file to media and give the file name after media/(filename) -->
+    		<source src="media/.mp4" type="video/mp4">
     	</video>
     </div>
 
